test/testdata/number/times_non_int_list_error.lox
print 2.5 * ["hello"]; // error: cannot multiply 'list' by non-integer 'number'
